# c2clat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c2clat.cpp
.github/workflows/: main.yml
builder/: cmake-builder.sh  dockcross-builder.sh  ninja-builder.sh
